RESOLVED FIXED274559
[PlayStation] Fix build break after 279154@main
https://bugs.webkit.org/show_bug.cgi?id=274559
Summary [PlayStation] Fix build break after 279154@main
Jigen Zhou
Reported 2024-05-22 17:10:40 PDT
With the fix in 279154@main, there is linking error on undefined symbol `WebCore::GLFence::~GLFence(): Link : error: L0039: reference to undefined symbol `WebCore::GLFence::~GLFence()' in file "C:\BW\PlayStation-Release-Build\build\WebKitBuild\Release\Source\WebCore\CMakeFiles\WebCore.dir\__\__\WebCore\DerivedSources\unified-sources\UnifiedSource-3c72abbe-51.cpp.o" UnifiedSource-3c72abbe-51.cpp : error: L0039: reference to undefined symbol `WebCore::GLFence::~GLFence()' in file "C:\BW\PlayStation-Release-Build\build\WebKitBuild\Release\Source\WebCore\CMakeFiles\WebCore.dir\__\__\WebCore\DerivedSources\unified-sources\UnifiedSource-3c72abbe-51.cpp.o" UnifiedSource-3c72abbe-51.cpp : error: L0039: reference to undefined symbol `WebCore::GLFence::~GLFence()' in file "C:\BW\PlayStation-Release-Build\build\WebKitBuild\Release\Source\WebCore\CMakeFiles\WebCore.dir\__\__\WebCore\DerivedSources\unified-sources\UnifiedSource-3c72abbe-51.cpp.o" orbis-clang++: error: linker command failed with exit code 1 (use -v to see invocation) Link : error: L0039: reference to undefined symbol `WebCore::GLFence::~GLFence()' in file "C:\BW\PlayStation-Release-Build\build\WebKitBuild\Release\Source\WebCore\CMakeFiles\WebCore.dir\__\__\WebCore\DerivedSources\unified-sources\UnifiedSource-3c72abbe-51.cpp.o" UnifiedSource-3c72abbe-51.cpp : error: L0039: reference to undefined symbol `WebCore::GLFence::~GLFence()' in file "C:\BW\PlayStation-Release-Build\build\WebKitBuild\Release\Source\WebCore\CMakeFiles\WebCore.dir\__\__\WebCore\DerivedSources\unified-sources\UnifiedSource-3c72abbe-51.cpp.o" UnifiedSource-3c72abbe-51.cpp : error: L0039: reference to undefined symbol `WebCore::GLFence::~GLFence()' in file "C:\BW\PlayStation-Release-Build\build\WebKitBuild\Release\Source\WebCore\CMakeFiles\WebCore.dir\__\__\WebCore\DerivedSources\unified-sources\UnifiedSource-3c72abbe-51.cpp.o"
Attachments
EWS
Comment 1 2024-05-22 17:55:57 PDT
Committed 279166@main (3216dc542008): <https://commits.webkit.org/279166@main> Reviewed commits have been landed. Closing PR #28956 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-05-22 17:56:15 PDT
Note You need to log in before you can comment on or make changes to this bug.