Fixed Playstation build break after 279154@main https://bugs.webkit.org/show_bug.cgi?id=274559

Reviewed by Don Olmstead.

Fix linking error on undefined symbol `WebCore::GLFence::~GLFence()

* Source/WebCore/platform/graphics/nicosia/NicosiaImageBufferPipe.cpp:

Canonical link: https://commits.webkit.org/279166@main